# Eighth-Lecture-HomeWork

./: CMakeLists.txt  README.md
code/cpp/: Circle.cpp  Fraction.cpp  FractionAdder.cpp  Rectangle.cpp  main.cpp
code/h/: Circle.h  Figure.h  Fraction.h  FractionAdder.h  Rectangle.h
